@@ -59,7 +59,8 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.5.5</version>
 					<configuration>
-						<argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+						<argLine>@{argLine} --add-opens
+							java.base/java.util=ALL-UNNAMED</argLine>
 					</configuration>
 				</plugin>
 			</plugins>
